# hehe

./: README.md
model_plugin/: CMakeLists.txt  package.xml
model_plugin/src/: animated_box_1.cc  animated_box_2.cc  animated_box_4.cc
model_plugin/worlds/: 11.world  c205.world  c205_dynamic_object.world  c205_empty.world  dynamic_object.world  human_walk.world  rectangle.world  square_1.world
model_plugin/worlds/box1/: model.sdf
model_plugin/worlds/box2/: model.sdf
model_plugin/worlds/c205/: model.config  model.sdf
model_plugin/worlds/rectangle/: model.config  model.sdf
mpc/: package.xml
mpc/config/: mpc_local_planner_params_minimum_time.yaml
mpc/launch/: simu_mpc_minimum_time.launch
mpc_local_planner/mpc_local_planner/launch/: test_mpc_optim_node.launch
mpc_local_planner/mpc_local_planner_examples/launch/: diff_drive_minimum_time.launch
mpc_local_planner/mpc_local_planner_examples/stage/: maze_diff_drive.world
robot/: v1.xml
robot/config/: diffdrive.yaml  gazebo_ros_control_params.yaml
robot/config/params/: move_base_params.yaml  (+5 more)
robot/launch/: display.launch  gazebo.launch  simu_amcl.launch  simu_gmapping.launch  simu_hector_slam.launch  simu_move_base.launch  simu_navigation.launch  simu_pid_robot.launch  simu_robot.launch  test.launch
robot/maps/: map_c205.pgm  map_c205.yaml  rectangle.pgm  rectangle.yaml
robot/meshes/: Wheel_Left.STL  Wheel_Right.STL
robot/rviz/: display.rviz  mapping.rviz  mpc.rviz
robot/urdf/: base_link.xacro  caster_wheel.xacro  imu.xacro  lidar.xacro  materials.xacro  robot.csv  robot.urdf.xacro  wheel.xacro
(+5 files in other folders)
